# pong

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ball.cpp  ball.h  collision.cpp  collision.h  constants.h  font.cpp  font.h  font_renderer.cpp  font_renderer.h  game.cpp  gamestate.h  options.cpp  options.h  paddle.cpp  paddle.h  sound.cpp  sound.h  sound_player.cpp  sound_player.h  texture.cpp  texture.h  texture_pack.cpp  texture_pack.h  utilities.cpp  utilities.h
assets/textures/: bg.pxm
